Profile Pic acquiring function

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-xl navbar-dark bg-blue "">
+<nav class="navbar navbar-expand-xl navbar-dark bg-blue ">
         <a class="navbar-brand" href="#">Vizhub</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
