--- a/user.html
+++ b/user.html
@@ -9,6 +9,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>  
+  <script type="text/javascript" src="chart.js"></script>
 </head>
 <body>
 <div class="alert alert-dismissible alert-success">
@@ -26,10 +28,17 @@
   </div>
 </div>
 
-<form method="post" action="chart.html">
-  <button style="width: 50%; float:left; height:150px; background:rgb(78, 210, 214); margin:0px">Engagement Visualization</button>
-</form><button style="width: 50%; float:right; height:150px; background:rgb(184, 184, 41); margin:0px">Location Vizualization</button>
-
+<form action="javascript:plot()">
+    <button type="submit" style="width: 50%; float:left; height:150px; background:rgb(78, 210, 214); margin:0px">Engagement Visualization</button>
+  </form>
+  <button style="width: 50%; float:right; height:150px; background:rgb(184, 184, 41); margin:0px">Location Vizualization</button>
+  
+  <canvas id="chart1" float="left" width="400" height="400"></canvas>
+  <canvas id="chart2" float="right" width="400" height="400"></canvas>
+  
+  <!-- <script>plot()</script> -->
+  </body>
+  </html>
 </body>
 </html>
 
