Created chart files

--- a/home.html
+++ b/home.html
@@ -29,19 +29,11 @@
             </li>
           </ul>
 
-          <!-- <a href="login.php" class="loginBtn loginBtnfacebook">Go to Google</a> -->
           <form method="POST" action ="http://localhost/VizHub/login.php">
-            <!-- <button class="loginBtn loginBtnfacebook"> -->
-                <!-- <input type ="submit" class ="loginBtn loginBtnfacebook" name = "logInBtn" value = "Log In With Facebook"> -->
-            <!-- </button> -->
-            <div class="loginBtn loginBtn--facebook">
-                <input type ="submit" class="loginBtn" name = "logInBtn" value="Log In With Facebook">
-            </div>
-            <!-- <a href="login.php"> -->
-              <!-- <button type ="submit" class="loginBtn loginBtnfacebook">
+              <button type ="submit" name = "logInBtn" class="loginBtn loginBtn--facebook">
               Login with Facebook
-            </button> -->
-          <!-- </a> -->
+            </button>
+
 
           </form>  
 
