--- a/user.html
+++ b/user.html
@@ -13,6 +13,10 @@
   <script type="text/javascript" src="chart.js"></script>
 </head>
 <body>
+    <div class="alert alert-dismissible alert-success">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>Well done!</strong> You successfully read <a href="#" class="alert-link">this important alert message</a>.
+      </div>
 <div class="alert alert-dismissible alert-success">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
   <strong>Well done!</strong> You successfully logged in! 👍</a>.
