loading pages, logout function

--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
           </ul>
 
           <form method="POST" action ="http://localhost/VizHub/login.php">
-              <button type ="submit" name = "logInBtn" class="loginBtn loginBtn--facebook">
+              <button type ="submit" name = "logInBtn" class="Btn Btn--facebook">
               Login with Facebook
             </button>
 
