--- a/home.html
+++ b/home.html
@@ -28,12 +28,12 @@
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-          <a class="navbar-brand" href="#">VizHub</a>
+          <a class="navbar-brand" href="http://localhost/VizHub">VizHub</a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
               aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="#">Home</a>
+          <a class="navbar-brand" href="http://localhost/VizHub/home.html">Home</a>
           <a class="navbar-brand" href="http://localhost/VizHub/aboutUs.html">About Us</a>
 
           <div class="collapse navbar-collapse" id="navbarResponsive">
