--- a/home.html
+++ b/home.html
@@ -61,22 +61,22 @@
               <!-- Slide One - Set the background image for this slide in the line below -->
               <div class="carousel-item active" style="background-image: url('img/insight.jpg')">
                   <div class="carousel-caption d-none d-md-block">
-                      <h1>VizHub ™ </h1>
+                      <h1>VizHub</h1>
                       <h3>: Data Insight Provider.</h3>
                   </div>
               </div>
               <!-- Slide Two - Set the background image for this slide in the line below -->
-              <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+              <div class="carousel-item" style="background-image: url('img/visualization.jpg')">
                   <div class="carousel-caption d-none d-md-block">
-                      <h3>Visualizations</h3>
-                      <p>We analyst the data collected and visualized it.</p>
+                      <h3>Visualization</h3>
+                      <p>We analyse the data collected and visualize it.</p>
                   </div>
               </div>
               <!-- Slide Three - Set the background image for this slide in the line below -->
-              <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+              <div class="carousel-item" style="background-image: url('img/prediction.png')">
                   <div class="carousel-caption d-none d-md-block">
                       <h3>Prediction</h3>
-                      <p>This is a description for the third slide.</p>
+                      <p>The machine that predicts the number of likes of your post!</p>
                   </div>
               </div>
           </div>
@@ -127,7 +127,7 @@
               <div class="card h-100">
                   <h4 class="card-header">What's more from us?😁</h4>
                   <div class="card-body">
-                      <p class="card-text">We predict the number of like according your message contain too!</p>
+                      <p class="card-text">We predict the number of likes according to your post message too!</p>
                   </div>
                   <!-- <div class="card-footer">
             <a href="#" class="btn btn-primary">Learn More</a>
