--- a/aboutUs.html
+++ b/aboutUs.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Modern Business - Start Bootstrap Template</title>
+    <title>About Us</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -56,7 +56,7 @@
 
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="index.html">Home</a>
+          <a href="http://localhost/VizHub/home.html">Home</a>
         </li>
         <li class="breadcrumb-item active">About</li>
       </ol>
@@ -64,7 +64,7 @@
       <!-- Intro Content -->
       <div class="row">
         <div class="col-lg-6">
-          <img class="img-fluid rounded mb-4" src="http://placehold.it/750x450" alt="">
+          <img class="img-fluid rounded mb-4" src="img/about.jpg" alt="">
         </div>
         <div class="col-lg-6">
           <h2>Data Analytic tool: VizHub</h2>
@@ -79,11 +79,11 @@
       <div class="row">
         <div class="col-lg-4 mb-4">
           <div class="card h-100 text-center">
-            <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+            <img class="card-img-top" src="img/profile.jpg" alt="">
             <div class="card-body">
               <h4 class="card-title">Foo Kai Wen</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+              <h6 class="card-subtitle mb-2 text-muted">Like Prediction Module</h6>
+              <!-- <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p> -->
             </div>
             <div class="card-footer">
               <a href="#">kaiwenfoo@student.usm.my</a>
@@ -92,11 +92,11 @@
         </div>
         <div class="col-lg-4 mb-4">
           <div class="card h-100 text-center">
-            <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+            <img class="card-img-top" src="img/profile.jpg" alt="">
             <div class="card-body">
               <h4 class="card-title">Eric Tan Zhi Hao</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+              <h6 class="card-subtitle mb-2 text-muted">Data Collection Module</h6>
+              <!-- <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p> -->
             </div>
             <div class="card-footer">
               <a href="#">erictan1207@student.usm.my</a>
@@ -105,11 +105,11 @@
         </div>
         <div class="col-lg-4 mb-4">
           <div class="card h-100 text-center">
-            <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+            <img class="card-img-top" src="img/profile.jpg" alt="">
             <div class="card-body">
               <h4 class="card-title">Liew Hann Yuan</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+              <h6 class="card-subtitle mb-2 text-muted">Analytic and Visualization Module</h6>
+              <!-- <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p> -->
             </div>
             <div class="card-footer">
               <a href="#">hannyuan04@student.usm.my</a>
