--- a/home.html
+++ b/home.html
@@ -66,17 +66,17 @@
                   </div>
               </div>
               <!-- Slide Two - Set the background image for this slide in the line below -->
-              <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+              <div class="carousel-item" style="background-image: url('img/dataviz.jpg')">
                   <div class="carousel-caption d-none d-md-block">
                       <h3>Visualizations</h3>
                       <p>We analyst the data collected and visualized it.</p>
                   </div>
               </div>
               <!-- Slide Three - Set the background image for this slide in the line below -->
-              <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+              <div class="carousel-item" style="background-image: url('img/prediction.jpg')">
                   <div class="carousel-caption d-none d-md-block">
                       <h3>Prediction</h3>
-                      <p>This is a description for the third slide.</p>
+                      <p>We provide prediction for your message.</p>
                   </div>
               </div>
           </div>
