Change the display method of graph to per day

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -67,7 +67,7 @@
           <img class="img-fluid rounded mb-4" src="img/about.jpg" alt="">
         </div>
         <div class="col-lg-6">
-          <h2>Data Analytic tool: VizHub</h2>
+          <h2>Data Insight Provider: VizHub</h2>
           <p>We are from Universiti Sains Malaysia, Malaysia. Currently third year Computer Science students.</p>
         </div>
       </div>
