--- a/home.html
+++ b/home.html
@@ -73,7 +73,7 @@
                   </div>
               </div>
               <!-- Slide Three - Set the background image for this slide in the line below -->
-              <div class="carousel-item" style="background-image: url('img/prediction.png')">
+              <div class="carousel-item" style="background-image: url('img/prediction.jpg')">
                   <div class="carousel-caption d-none d-md-block">
                       <h3>Prediction</h3>
                       <p>The machine that predicts the number of likes of your post!</p>
