slight color change

--- a/home.html
+++ b/home.html
@@ -21,6 +21,8 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  
 </head>
 
 <body>
@@ -110,7 +112,7 @@
           </div>
           <div class="col-lg-4 mb-4">
               <div class="card h-100">
-                  <h4 class="card-header">What do we do?🤔</h4>
+                  <h4 class="card-header2">What do we do?🤔</h4>
                   <div class="card-body">
                       <p class="card-text">We analyse Collected data and present stunning insights back to you
                           visually. We focus on two types of visualizations:
@@ -125,7 +127,7 @@
           </div>
           <div class="col-lg-4 mb-4">
               <div class="card h-100">
-                  <h4 class="card-header">What's more from us?😁</h4>
+                  <h4 class="card-header3">What's more from us?😁</h4>
                   <div class="card-body">
                       <p class="card-text">We predict the number of likes according to your post message too!</p>
                   </div>
